force-app/main/default/objects/CA_ContratosConta__c/CA_ContratosConta__c.object-meta.xml
<CustomObject>
    <label>Contratos Contas</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Conta do Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos da Conta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>