force-app/main/default/objects/CA_ContratosConta__c/fields/CA_ContratoConta__c.field-meta.xml
<CustomField>
    <fullName>CA_ContratoConta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ContratosContas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>