force-app/main/default/objects/CA_ContratosConta__c/fields/CA_Contratos__c.field-meta.xml
<CustomField>
    <fullName>CA_Contratos__c</fullName>
    <label>Contratos</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>ContasdosContratos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>