force-app/main/default/objects/CA_ContratosConta__c/fields/CA_TipoRelacionamento__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoRelacionamento__c</fullName>
    <label>Tipo de Relacionamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>