force-app/main/default/objects/CA_ContratosConta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CA_ContratoConta__c</columns>
    <columns>CA_Contratos__c</columns>
    <columns>CA_TipoRelacionamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>